// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnoVault deposit deposit 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 80394,
}
`;

exports[`GnoVault pulls withdrawals on claim exited assets 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 124820,
}
`;

exports[`GnoVault swap xdai to gno manager can swap all xdai to gno 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 119517,
}
`;

exports[`GnoVault swap xdai to gno manager can swap some xdai to gno 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 124305,
}
`;

exports[`GnoVault xdai manager can be set by the admin 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 52684,
}
`;
